tests/ui/non_unit_variant.stderr
error: must be a unit variant to use serde_repr_plus derive
 --> tests/ui/non_unit_variant.rs:6:5
  |
6 |     Two(u8),
  |     ^^^
